--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    description: 'A personal webpage for Ahmed Marwan Foda.'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -45,7 +44,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Ahmed Marwan Foda. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
